--- a/qinyou.plist
+++ b/qinyou.plist
@@ -19,7 +19,7 @@
 					<key>needs-shine</key>
 					<false/>
 					<key>url</key>
-					<string></string>
+					<string>http://mb.zbcare.cn/qinyou/icon/icon.png</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -27,7 +27,7 @@
 					<key>needs-shine</key>
 					<false/>
 					<key>url</key>
-					<string></string>
+					<string>http://mb.zbcare.cn/qinyou/icon/icon.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
