--- a/watch.plist
+++ b/watch.plist
@@ -33,7 +33,7 @@
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>com.zhibao.sportE</string>
+				<string>com.zhibao.watchE</string>
 				<key>bundle-version</key>
 				<string>1.0</string>
 				<key>kind</key>
